--- a/src/app/hero3/hero3.component.html
+++ b/src/app/hero3/hero3.component.html
@@ -6,4 +6,4 @@
     <span class="badge">{{ hero.id }}</span> {{ hero.name }}
   </li>
 </ul>
-<my-hero-detail [hero]="selectedHero"></my-hero-detail>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
