--- a/src/app/hero5/components/hero-detail/hero-detail.component.html
+++ b/src/app/hero5/components/hero-detail/hero-detail.component.html
@@ -1,3 +1,4 @@
+<common-hero-nav></common-hero-nav>
 <div *ngIf="hero">
   <h2>{{hero.name}} details!</h2>
   <div><label>id: </label>{{hero.id}}</div>
