--- a/src/app/hero5/components/dashboard/dashboard.component.html
+++ b/src/app/hero5/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<common-hero-nav></common-hero-nav>
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes" [routerLink]="['/hero6/detail', hero.id]" class="col-1-4">
