--- a/src/app/hero6/components/heroes/heroes.component.html
+++ b/src/app/hero6/components/heroes/heroes.component.html
@@ -1,15 +1,20 @@
 <common-hero6-nav></common-hero6-nav>
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes"
-    [class.selected]="hero === selectedHero"
-    (click)="onSelect(hero)">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
-  </li>
+    <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+        <span class="badge">{{hero.id}}</span> <span>{{hero.name}}</span>
+        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button>
+    </li>
 </ul>
 <div *ngIf="selectedHero">
-  <h2>
-    {{selectedHero.name | uppercase}} is my hero
-  </h2>
-  <button (click)="gotoDetail()">View Details</button>
+    <h2>
+        {{selectedHero.name | uppercase}} is my hero
+    </h2>
+    <button (click)="gotoDetail()">View Details</button>
+</div>
+<div>
+    <label>Hero name:</label> <input #heroName />
+    <button (click)="add(heroName.value); heroName.value=''">
+    Add
+  </button>
 </div>
