added hero tutorial

--- a/src/component/app.component.html
+++ b/src/component/app.component.html
@@ -3,6 +3,7 @@
 </h1>
 <ul>
   <li *ngFor="let menu of menuList">
-    <a href="{{ menu.href }}">{{ menu.text }}</a>
+    <a routerLink="{{ menu.href }}">{{ menu.text }}</a>
   </li>
 </ul>
+<router-outlet></router-outlet>
