modified selecter name

--- a/src/component/hero6/dashboard/dashboard.component.html
+++ b/src/component/hero6/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<common-hero6-nav></common-hero6-nav>
+<app-hero6-nav></app-hero6-nav>
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
     <a *ngFor="let hero of heroes" [routerLink]="['/hero7/detail', hero.id]" class="col-1-4">
