--- a/src/component/hero6/hero-detail/hero-detail.component.html
+++ b/src/component/hero6/hero-detail/hero-detail.component.html
@@ -1,4 +1,4 @@
-<common-hero6-nav></common-hero6-nav>
+<app-hero6-nav></app-hero6-nav>
 <div *ngIf="hero">
     <h2>{{hero.name}} details!</h2>
     <div><label>id: </label>{{hero.id}}</div>
