--- a/src/component/hero5/hero-detail/hero-detail.component.html
+++ b/src/component/hero5/hero-detail/hero-detail.component.html
@@ -1,10 +1,10 @@
-<common-hero-nav></common-hero-nav>
+<app-hero5-nav></app-hero5-nav>
 <div *ngIf="hero">
-  <h2>{{hero.name}} details!</h2>
-  <div><label>id: </label>{{hero.id}}</div>
-  <div>
-    <label>name: </label>
-    <input [(ngModel)]="hero.name" placeholder="name"/>
-  </div>
-  <button (click)="goBack()">Back</button>
+    <h2>{{hero.name}} details!</h2>
+    <div><label>id: </label>{{hero.id}}</div>
+    <div>
+        <label>name: </label>
+        <input [(ngModel)]="hero.name" placeholder="name" />
+    </div>
+    <button (click)="goBack()">Back</button>
 </div>
