--- a/src/component/hero6/heroes/heroes.component.html
+++ b/src/component/hero6/heroes/heroes.component.html
@@ -1,4 +1,4 @@
-<common-hero6-nav></common-hero6-nav>
+<app-hero6-nav></app-hero6-nav>
 <h2>My Heroes</h2>
 <ul class="heroes">
     <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
